--- a/src/app/home/components/home.component.html
+++ b/src/app/home/components/home.component.html
@@ -1,3 +1,5 @@
-<p>
-  home works!
-</p>
+<app-navbar></app-navbar>
+<div class="container-fluid container-dapp">
+    <!-- Main content -->
+    <router-outlet></router-outlet>
+</div>
