--- a/src/app/core/components/navbar.component.html
+++ b/src/app/core/components/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg custom-nav">
-    <button mat-button class="navbar-brand" [routerLink]="['guides']">
+    <button mat-button class="navbar-brand" [routerLink]="['voting']">
         <img src="/assets/brand/untitled.svg" width="30" height="30" class="d-inline-block align-top middle-brand-text">
         {{brandName}}
     </button>
