--- a/src/app/public/components/login.component.html
+++ b/src/app/public/components/login.component.html
@@ -11,7 +11,7 @@
             </div>
             <!-- Name -->
             <mat-form-field class="full-width-input">
-                    <input id="input-user" matInput placeholder="Citizen's Name" formControlName="name">
+                    <input id="input-name" matInput placeholder="Citizen's Name" formControlName="name">
                     <mat-error *ngIf="citizenName.invalid">{{getNameErrorMessage()}}</mat-error>
             </mat-form-field>
 
