--- a/src/app/home/components/home.component.html
+++ b/src/app/home/components/home.component.html
@@ -1,5 +1,5 @@
 <app-navbar></app-navbar>
-<div class="container-fluid container-dapp">
+<div class="container-fluid container-dapp h-100">
     <!-- Main content -->
     <router-outlet></router-outlet>
 </div>
