--- a/src/app/public/components/login.component.scss
+++ b/src/app/public/components/login.component.scss
@@ -36,6 +36,17 @@
     }
     
 }
+
+
+.sign-up-text {
+  margin-top: 10px;
+  text-align: center;
+  .sign-up {
+    cursor: pointer;
+    text-decoration: underline;
+    color: #0366d6;
+}
+}
 /* atom */
 @keyframes atom {
     from { transform: none; }
