--- a/src/app/public/components/login.component.html
+++ b/src/app/public/components/login.component.html
@@ -11,14 +11,14 @@
             </div>
             <!-- Name -->
             <mat-form-field class="full-width-input">
-                    <input id="input-name" matInput placeholder="Citizen's Name" formControlName="name">
-                    <mat-error *ngIf="citizenName.invalid">{{getNameErrorMessage()}}</mat-error>
+                    <input id="input-id" matInput placeholder="Citizen's ID" formControlName="citizendID">
+                    <mat-error *ngIf="citizenID.invalid">{{getIdErrorMessage()}}</mat-error>
             </mat-form-field>
 
             <!-- ID -->
             <mat-form-field class="full-width-input">
-                    <input id="input-id" type="password" matInput placeholder="Citizen's ID" formControlName="id">
-                    <mat-error *ngIf="citizenID.invalid">{{getIdErrorMessage()}}</mat-error>
+                    <input id="input-password" type="password" matInput placeholder="Password" formControlName="password">
+                    <mat-error *ngIf="password.invalid">{{getPasswordErrorMessage()}}</mat-error>
             </mat-form-field>
 
             <!-- Sign in button -->
@@ -30,6 +30,7 @@
                 <div class="sign-up-text">
                     Don't have an account? 
                     <a class="sign-up" (click)="onSignUp()">Sign up</a>
+                     now!
                 </div>
             </div>
       </form>
