update contract call

--- a/src/app/home/components/voting.component.html
+++ b/src/app/home/components/voting.component.html
@@ -4,6 +4,7 @@
             <app-candidate [candidate]="candidate"></app-candidate>   
         </mat-grid-tile>
     </mat-grid-list>
+    <button class="btn-lg btn-block" mat-raised-button>Vote</button>
 </div>
 
 
