Express:contract is now interact with MongoDB, Angular: adding auth guard, 404 page.

--- a/src/app/core/components/navbar.component.html
+++ b/src/app/core/components/navbar.component.html
@@ -9,5 +9,10 @@
                 {{menuItem.title}}
             </button>
         </li>
+        <li routerLinkActive="active">
+            <button name="Sign out" class="nav-item-text" (click)="onLogout()" mat-button>
+                Sign out
+            </button>
+        </li>
     </ul>
 </nav>
