Express: fix bug blockchain out of gas. Angular: update UI

--- a/src/app/home/components/candidate.component.html
+++ b/src/app/home/components/candidate.component.html
@@ -2,7 +2,7 @@
     <!-- <mat-card-header>
         <div mat-card-avatar class="example-header-image"></div>
     </mat-card-header> -->
-    <img mat-card-image src="{{ candidate['avatar'] }}" alt="Photo of a candidate">
+    <img mat-card-image src="{{ candidate['avatar'] }}" alt="Photo of a candidate" height="225" width="360">
     <mat-card-content>
         <mat-card-title>{{ candidate['name'] }}</mat-card-title>
         <mat-card-subtitle>{{ candidate['party'] }}</mat-card-subtitle>
