--- a/src/app/home/components/voting.component.html
+++ b/src/app/home/components/voting.component.html
@@ -5,7 +5,9 @@
             </app-candidate>   
         </mat-grid-tile>
     </mat-grid-list>
-    <button class="btn-lg btn-block" (click)="onVoteToBlockchain()" mat-raised-button>Vote</button>
+    <div class="row justify-content-center">
+        <button class="btn-lg btn-block w-50" color="primary" (click)="onVoteToBlockchain()" mat-raised-button>Vote</button>
+    </div>
 </div>
 
 
