--- a/src/app/home/components/score-board.component.html
+++ b/src/app/home/components/score-board.component.html
@@ -1,3 +1,3 @@
-<p>
-  score-board works!
-</p>
+<div class="container-fluid wrapper score-grid no-gutters">
+    <canvas id="canvas">{{ chart }}</canvas>
+</div>
