--- a/src/app/public/components/register.component.html
+++ b/src/app/public/components/register.component.html
@@ -32,7 +32,7 @@
             <div>
                 <button id="sign-in-btn" mat-button (click)="onRegister()" class=" full-width-input"
                         [disabled]="!registerFormGroup.valid || canDisableSignInButton">
-                    <span class="text-color-login-form">Sign In</span>
+                    <span class="text-color-login-form">Sign Up</span>
                 </button>
                 <div class="sign-up-text">
                     Already have an account?
