--- a/src/app/ea-admin/master-ea-admin/master-ea-admin.component.html
+++ b/src/app/ea-admin/master-ea-admin/master-ea-admin.component.html
@@ -1,4 +1,9 @@
-<div class="container-fluid container-dapp h-100">
-  <!-- Main content -->
-  <router-outlet></router-outlet>
+<div class="wrapper">
+    <div class="sidebar">
+        <!-- TODO: add fixed sidebar-->
+    </div>
+    <div class="page-content">
+        <!-- Main content -->
+        <router-outlet></router-outlet>
+    </div>
 </div>
