--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
-
+@import './variables';
 
 input:focus,
 select:focus,
@@ -18,5 +18,19 @@ body {
 }
 .wrapper {
     display: flex;
+    width: 100%;
+}
+
+.page-content {
+    width: calc(100% - 250px);
+    padding: 40px;
+    min-height: 100vh;
+    transition: all 0.3s;
+    position: absolute;
+    top: 0;
+    right: 0;
+    background-color: $primary-color;
+}
+.page-content.active {
     width: 100%;
 }
