Add voter management - RegEA

--- a/src/app/reg-admin/master-reg-admin/master-reg-admin.component.html
+++ b/src/app/reg-admin/master-reg-admin/master-reg-admin.component.html
@@ -2,7 +2,7 @@
     <div class="sidebar">
         <!-- TODO: add fixed sidebar-->
     </div>
-    <div class="page-content">
+    <div class="page-content w-100">
         <!-- Main content -->
         <router-outlet></router-outlet>
     </div>
