--- a/src/app/ea-admin/master-ea-admin/master-ea-admin.component.html
+++ b/src/app/ea-admin/master-ea-admin/master-ea-admin.component.html
@@ -1,10 +1,21 @@
 <div class="wrapper">
-    <div class="sidebar">
+    <!-- Top Bar -->
+    <app-header></app-header>
+    <!-- End of Top Bar -->
+    <!-- Left menu -->
+    <div class="left-menu">
         <!-- TODO: add fixed sidebar-->
         <app-navbar></app-navbar>
     </div>
-    <div class="page-content">
-        <!-- Main content -->
+    <!-- End of Left menu -->
+    
+    <!-- Dark Overlay element -->
+    <!-- <div class="overlay" [ngClass]='{"active":isSideBarActive}' (click)="onCloseSideBar()"></div> -->
+    <!-- End of Dark Overlay element -->
+
+    <!-- Main content -->
+    <div class="page-content" [ngClass]='{"hide-sidebar":!isSideBarActive}'>
         <router-outlet></router-outlet>
     </div>
+    <!-- End of Main content -->
 </div>
