--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,3 +1,19 @@
-<p>
-  header works!
-</p>
+<nav class="navbar navbar-expand-lg navbar-light custom-nav fixed-top">
+    <button class="hamburger" (click)="toggleSidebar()" mat-button>
+        <!-- <span class="lnr lnr-menu"></span> -->
+        <i class="material-icons">menu</i>
+    </button>
+    <a class="navbar-brand text-color">
+        <img src="../../../assets/brand/eth-brand-2.svg" width="30" height="30" class="d-inline-block align-top" alt="">
+        {{brandName}}
+    </a>
+    
+    <ul class="navbar-nav text-color">
+        <li class="nav-item">
+            <a class="nav-link">Home</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link">Fake top nav</a>
+        </li>
+    </ul>
+</nav>
