--- a/src/app/reg-admin/master-reg-admin/master-reg-admin.component.html
+++ b/src/app/reg-admin/master-reg-admin/master-reg-admin.component.html
@@ -1,9 +1,22 @@
 <div class="wrapper">
-    <div class="sidebar">
-        <!-- TODO: add fixed sidebar-->
+    <!-- Top Bar -->
+    <app-header></app-header>
+    <!-- End of Top Bar -->
+    
+    <!-- Left menu -->
+    <div class="left-menu">
+        <app-navbar></app-navbar>
     </div>
-    <div class="page-content w-100">
-        <!-- Main content -->
+    <!-- End of Left menu -->
+    
+    <!-- Dark Overlay element -->
+    <!-- <div class="overlay" [ngClass]='{"active":isSideBarActive}' (click)="onCloseSideBar()"></div> -->
+    <!-- End of Dark Overlay element -->
+
+    <!-- Main content -->
+    <div class="page-content" [ngClass]='{"hide-sidebar":!isSideBarActive}'>
         <router-outlet></router-outlet>
     </div>
+    <!-- End of Main content -->
 </div>
+    
