--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -13,6 +13,26 @@ body {
     background-color: white;
 }
 
+/* width */
+::-webkit-scrollbar {
+    width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: #e2e0e0; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #888; 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #555; 
+}
+
 .container-dapp {
     padding: 0;
 }
