--- a/src/app/reg-admin/master-reg-admin/master-reg-admin.component.html
+++ b/src/app/reg-admin/master-reg-admin/master-reg-admin.component.html
@@ -5,7 +5,7 @@
     
     <!-- Left menu -->
     <div class="left-menu">
-        <app-navbar></app-navbar>
+        <app-navbar [routesItems]="routesItems"></app-navbar>
     </div>
     <!-- End of Left menu -->
     
