can display citizen information

--- a/src/app/reg-admin/voter-management/voter-management.component.scss
+++ b/src/app/reg-admin/voter-management/voter-management.component.scss
@@ -47,6 +47,10 @@ $h1: 2rem;
             .generated-password {
                 font-weight: bold;
             }
+
+            .citizen-image {
+                text-align: center;
+            }
         }
 
     }
