--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,6 +1,7 @@
 $primary-color: #fafafa;
 $primary-light: #fff;
 $primary-dark: #c7c7c7;
+$primary-darker: #969696;
 $secondary-color: #1976d2;
 $secondary-light: #63a4ff;
 $secondary-dark: #004ba0;
@@ -9,3 +10,6 @@ $text-on-primary: #000;
 $text-hover-on-primary: #dbdbdb;
 $gray: #FAFAFA;
 $light-gray: #e1e2e1;
+
+/* Login */
+$login-primary-color: #2962ff;
