--- a/src/app/public/login/login.component.scss
+++ b/src/app/public/login/login.component.scss
@@ -1,152 +1,116 @@
+@import './src/scss/variables';
+@import './src/scss/checkbox';
 
 .form-layout {
     margin-top: 100px;
 }
 
 .col-layout {
-    width: 400px;
+    width: 450px;
 }
 .toolbar-box {
-    margin-top: -60px;
-    margin-bottom: 30px;
+    /* margin-top: -60px;
+    margin-bottom: 30px; */
+    height: 127px;
 }
 .login-toolbar {
-    background: #00c6ff;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #0072ff, #00c6ff);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #0072ff, #00c6ff); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    color: white;
-    justify-content: center;
-    box-shadow: 0 5px 11px 0 rgba(0,0,0,.18), 0 4px 15px 0 rgba(0,0,0,.15);
+    background-color: $login-primary-color;
+    color: $text-on-secondary;
+    height: inherit;
+    padding-left: 40px;
+    font-size: 25px;
+    font-weight: 300;
+    /* box-shadow: 0 5px 11px 0 rgba(0,0,0,.18), 0 4px 15px 0 rgba(0,0,0,.15); */
 }
 
 .from-gourp {
-    padding: 30px 20px 20px 20px;
-    box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12);
+    height: 380px;
+    padding: 50px 40px 20px 40px;
+    background-color: $primary-light;
+    /* box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12); */
+    box-shadow: 0 2px 2px rgba(10,16,20,.24), 0 0 2px rgba(10,16,20,.12);
 }
 
 .full-width-input {
     width: 100%;
     &.mat-button {
         /* border-radius: 25px; */
-        margin-top: 20px;
-        background: #00c6ff;  /* fallback for old browsers */
-        background: -webkit-linear-gradient(to right, #0072ff, #00c6ff);  /* Chrome 10-25, Safari 5.1-6 */
-        background: linear-gradient(to right, #0072ff, #00c6ff); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-        color: white;
+        margin-top: 30px;
+        background-color: $login-primary-color;
+        color: $text-on-secondary;
     }
     
 }
 
+.flex-center {
+    display: flex;
+    justify-content: center;
+    #sign-in-btn {
+        border-radius: 5px;
+        width: 100%;
+    }
+}
+
+.user-icon {
+    width: 50px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    border: 1px solid #fec107;
+    background-color: #fec107;
+    border-radius: 50%;
+    margin-top: -75px;
+    margin-left: 293px;
+    box-shadow: 0 4px 4px rgba(10,16,20,.24), 0 0 2px rgba(10,16,20,.12);
+    .fa-user-cog {
+        font-weight: 600;
+        color: $text-on-secondary;
+        vertical-align: middle;
+        padding-top: 14px;
+        padding-left: 3px;
+    }
+}
 
 .sign-up-text {
-  margin-top: 10px;
-  text-align: center;
-  .sign-up {
-    cursor: pointer;
-    text-decoration: underline;
-    color: #0366d6;
+    display: flex;
+    margin-top: 45px;
+    text-align: center;
+    .sign-up {
+        cursor: pointer;
+        text-decoration: underline;
+        color: $text-on-primary;
+    }
+    .session {
+        .session-text {
+            font-size: 12px;
+            font-weight: 500;
+            color: $primary-darker;
+        }
+    }
+    .keep-signed {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+    .forget-pwd {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+
 }
-}
-/* atom */
-@keyframes atom {
-    from { transform: none; }
-    to { transform: translateY(-10px); }
-  }
-  @keyframes electron-circle1 {
-    from { transform: rotateY(70deg) rotateZ(20deg); }
-    to { transform: rotateY(70deg) rotateZ(380deg); }
-  }
-  @keyframes electron1 {
-    from { transform: rotateZ(-20deg) rotateY(-70deg); }
-    to { transform: rotateZ(-380deg) rotateY(-70deg); }
-  }
-  @keyframes electron-circle2 {
-    from { transform: rotateY(60deg) rotateX(60deg) rotateZ(-30deg); }
-    to { transform: rotateY(60deg) rotateX(60deg) rotateZ(330deg); }
-  }
-  @keyframes electron2 {
-    from { transform: rotateZ(30deg) rotateX(-60deg) rotateY(-60deg); }
-    to { transform: rotateZ(-330deg) rotateX(-60deg) rotateY(-60deg); }
-  }
-  @keyframes electron-circle3 {
-    from { transform: rotateY(-60deg) rotateX(60deg) rotateZ(100deg); }
-    to { transform: rotateY(-60deg) rotateX(60deg) rotateZ(460deg); }
-  }
-  @keyframes electron3 {
-    from { transform: rotateZ(-100deg) rotateX(-60deg) rotateY(60deg); }
-    to { transform: rotateZ(-460deg) rotateX(-60deg) rotateY(60deg); }
-  }
-  
-  
-  .atom {
-    margin: 50px auto;
-    width: 120px;
-    height: 120px;
-    position: relative;
-    animation: atom 1s ease-in-out infinite alternate;
-    perspective: 300px;
-    transform-style: preserve-3d;
-  }
-  .atom:before {
-      content: '';
-      position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    margin: auto;
-    width: 20px;
-    height: 20px;
-    border-radius: 10px;
-    background: #555;
-  }
-  .atom .electron {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    margin: auto;
-      width: 100px;
-    height: 100px;
-    border-radius: 50px;
-    border: 2px solid #666;
-    transform-style: preserve-3d;
-  }
-  .atom .electron:before {
-      content: '';
-    position: absolute;
-    top: -4px;
-    left: 0;
-    right: 0;
-    margin: auto;
-    width: 8px;
-    height: 8px;
-    border-radius: 4px;
-    background: #666;
-    transform-origin: 50% 50% 0;
-  }
-  .atom .electron:nth-child(1) {
-    transform: rotateY(70deg) rotateZ(20deg);
-    animation: electron-circle1 3s linear infinite;
-  }
-  .atom .electron:nth-child(2) {
-    transform: rotateY(60deg) rotateX(60deg) rotateZ(-30deg);
-    animation: electron-circle2 3s linear infinite;
-  }
-  .atom .electron:nth-child(3) {
-    transform: rotateY(-60deg) rotateX(60deg) rotateZ(100deg);
-    animation: electron-circle3 3s linear infinite;
-  }
-  .atom .electron:nth-child(1):before {
-    transform: rotateZ(-20deg) rotateY(-70deg);
-    animation: electron1 3s linear infinite;
-  }
-  .atom .electron:nth-child(2):before {
-    transform: rotateZ(30deg) rotateX(-60deg) rotateY(-60deg);
-    animation: electron2 3s linear infinite;
-  }
-  .atom .electron:nth-child(3):before {
-    transform: rotateZ(-100deg) rotateX(-60deg) rotateY(60deg);
-    animation: electron3 3s linear infinite;
-  }
+/* Checkbox */
+/* .styled-checkbox { 
+    // Box.
+    & + label:before {
+        border-width: 2px;
+        border-style: solid;
+        border-color: #a9a9a9;
+        border-radius: 2px;
+        content: '';
+        margin-right: 10px;
+        display: inline-block;
+        vertical-align: text-top;
+        width: 20px;
+        height: 20px;
+        background: white;
+    }
+} */
