--- a/src/app/home/candidate/candidate.component.html
+++ b/src/app/home/candidate/candidate.component.html
@@ -1,8 +1,9 @@
+<!--
 <mat-card class="example-card">
-    <!-- <mat-card-header>
+    &lt;!&ndash; <mat-card-header>
         <div mat-card-avatar class="example-header-image"></div>
-    </mat-card-header> -->
-    <img mat-card-image src="{{ candidate['avatar'] }}" alt="Photo of a candidate" height="225" width="360">
+    </mat-card-header> &ndash;&gt;
+    <img mat-card-image src="{{ candidate['picture'] }}" alt="Photo of a candidate" height="225" width="360">
     <mat-card-content>
         <mat-card-title>{{ candidate['name'] }}</mat-card-title>
         <mat-card-subtitle>{{ candidate['party'] }}</mat-card-subtitle>
@@ -12,7 +13,9 @@
         <button mat-button class="btn-read-more">Read more</button>
     </mat-card-content>
     <mat-card-actions>
-        <mat-checkbox [(ngModel)]="voted" (click)="onVoteClicked()" 
+        <mat-checkbox [(ngModel)]="voted" (click)="onVoteClicked()"
             labelPosition="end">Vote</mat-checkbox>
     </mat-card-actions>
-</mat-card>
+</mat-card>-->
+
+
