--- a/src/app/ea-admin/ballot-setup/ballot-setup.component.html
+++ b/src/app/ea-admin/ballot-setup/ballot-setup.component.html
@@ -2,16 +2,21 @@
     {{!isLinear ? 'Enable linear mode' : 'Disable linear mode'}}
 </button>
 <!-- TODO: add a Page Label component in shared module -->
+<!-- TODO: Add validator for all fields -->
 <mat-vertical-stepper class="card-shadow vertical-stepper" [linear]="isLinear" #stepper>
     <!-- Ballot information -->
     <mat-step [stepControl]="ballotInfoFormGroup">
         <form class="vertical-form" [formGroup]="ballotInfoFormGroup">
             <ng-template matStepLabel>Ballot information</ng-template>
             <mat-form-field>
-                <input matInput placeholder="Name" formControlName="ballotName" required>
+                <input matInput placeholder="Name" formControlName="ballotName">
+                <mat-error>
+                    <app-error-field [errorCode]="ballotInfoFormGroup.get('ballotName').errors" ></app-error-field>
+                </mat-error>
             </mat-form-field>
             <div>
-                <button class="step-button-padding" mat-stroked-button color="primary" matStepperNext>Next</button>
+                <button class="step-button-padding" mat-stroked-button color="primary" matStepperNext  [disabled]="!ballotInfoFormGroup.valid">Next</button>
+                <button class="step-button-padding" mat-stroked-button color="primary" (click)="onTestValue()">Next</button>
             </div>
         </form>
     </mat-step>
@@ -26,7 +31,7 @@
                   {{shoe}}
                 </mat-list-option>
             </mat-selection-list>
-              
+            
             <p>
                 Candidates selected: {{shoes.selectedOptions.selected.length}}
             </p>
@@ -37,6 +42,7 @@
             </div>
         </form>
     </mat-step>
+
     <!-- End of Candidates -->
 
     <!-- Phases -->
