--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -2,7 +2,8 @@ $primary-color: #fafafa;
 $primary-light: #fff;
 $primary-dark: #c7c7c7;
 $primary-darker: #969696;
-$secondary-color: #1976d2;
+/* $secondary-color: #1976d2; */
+$secondary-color: #0741ad;
 $secondary-light: #63a4ff;
 $secondary-dark: #004ba0;
 $text-on-secondary: #fff;
