--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -4,16 +4,16 @@
         <i class="material-icons">menu</i>
     </button>
     <a class="navbar-brand text-color">
-        <img src="../../../assets/brand/eth-brand-2.svg" width="30" height="30" class="d-inline-block align-top" alt="">
-        {{brandName}}
+        <img src="../../../assets/brand/icon_white.png" width="50px" class="d-inline-block align-top" alt="">
+        <span class="fancy-font">{{brandName}}</span>
     </a>
     
     <ul class="navbar-nav text-color">
-        <li class="nav-item">
+        <!-- <li class="nav-item">
             <a class="nav-link">Home</a>
         </li>
         <li class="nav-item">
             <a class="nav-link">Fake top nav</a>
-        </li>
+        </li> -->
     </ul>
 </nav>
