--- a/src/app/shared/nav/navbar.component.html
+++ b/src/app/shared/nav/navbar.component.html
@@ -1,11 +1,12 @@
 <nav id="sidebar" [ngClass]="{'active-sidebar': isSideBarActive}">
-    <div class="sidebar-header">
-            <i class="material-icons md-48">account_circle</i>
+    <div class="sidebar-header text-center">
+        <!-- <i class="material-icons md-48">account_circle</i> -->
+        <img src="../../../assets/images/lily-collins.jpeg" class="user-avatar">
     </div>
 
     <ul class="nav-list-unstyled components">
-        <div class="user-session">
-            <p>Welcome User</p>
+        <div class="user-session text-center">
+            <p>Hello Lilly Collins</p>
         </div>
         <li routerLinkActive="active" *ngFor="let routesItem of routesItems" class="{{routesItem.class}} menu-item">
             <a class="item-text" [routerLink]="[routesItem.path]">
